# hagias-monitor-service

./: .gitignore  Cargo.toml  README.md  Rocket.toml  display_config.json  layouts.json  log-normal.txt  log-one.txt  log.txt  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
display_config/: 2-with-tv.json  3-with-tv-primary.json  normal.json  one.json  tv.json  with-tv-primary.json  with-tv.json
hagias/: Cargo.toml  hagias_autohotkey.ahk
hagias-monitor-service/: Cargo.toml  Rocket.toml
hagias-monitor-service/src/: command.rs  config.rs  display.rs  index.rs  layouts.rs  main.rs  windows_util.rs
hagias/src/: cli.rs  command.rs  config.rs  display.rs  layouts.rs  logging.rs  main.rs  service.rs  windows_util.rs
hagias/src/cli/: cec.rs  layout.rs  rearranger.rs  service.rs
hagias/src/serde_override/: option_os_string.rs
src/: command.rs  config.rs  display.rs  index.rs  main.rs  windows_util.rs
src/serde_override/: mod.rs  os_string.rs
static/css/: input.css
templates/: base.html.tera  index.html.tera
xtask/: Cargo.toml
xtask/src/: cli.rs  command.rs  fs.rs  ignore.rs  main.rs  print.rs  watch.rs
