[package]
name = "hagias-monitor-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
bitflags = "2.9.0"
clap = { version = "4.5.34", features = ['derive'] }
rocket = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.44.2"
unit-enum = "1.4.1"
winapi = { version = "0.3.9", features = ["winnt"] }
windows = { version = "0.61.1", features = [
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Wdk_Graphics_Direct3D",
] }
