[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
notify-debouncer-full = "0.5.0"
command-group = "5.0.1"
watchexec = "6.0.0"
tokio = "1.44.2"
watchexec-signals = "4.0.1"
watchexec-events = "5.0.0"
ignore = "0.4.23"
